# nanotts

./: .gitignore  CMakeLists.txt  Makefile
src/: Boilerplate.hpp  CMakeLists.txt  Listener.hpp  Nano.cpp  Nano.hpp  Pico.cpp  Pico.hpp  PicoVoices.cpp  PicoVoices.h  Player_AO.cpp  lowest_file_number.cpp  main.cpp
svoxpico/: CMakeLists.txt  picoacph.c  picocep.c  picoctrl.c  picodata.c  picodata.h  picodbg.c  picoextapi.c  picokdbg.c  picokdt.c  picokpr.c  picoos.c  picopal.c  picopam.c  picopr.c  picorsrc.c  picosa.c  picosig.c  picospho.c  picotok.c  picowa.c
